# ROS2_Ackermann_Autonomy

./: LICENSE  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ackermann_core/lib/ackermann_core/: base_node
install/ackermann_core/share/ackermann_core/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/ackermann_core/: package.xml  setup.cfg  setup.py
src/ackermann_core/ackermann_core/hardware/: ackermann_hal.py
src/ackermann_core/ackermann_core/tools/: encoder_scanner.py  steering_calibration.py
src/ackermann_core/hardware/: ackermann_hal.py
